--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:          Tale
 description:    "Minimal Jekyll theme for storytellers"
 baseurl:        "/tale"
-url:            "https://chesterhow.github.io"
+url:            "https://baffbarker.github.io"
 disqus_shortname: https-baffbarker-github-io-tale
 
 # Author
